--- a/26-Project 2/css/style.css
+++ b/26-Project 2/css/style.css
@@ -202,3 +202,52 @@ lSPager {
     
 }
 /* Contact Page */
+
+/* Mobile Menu */
+.mobile-menu {
+    display: none !important;
+}
+/* Mobile Menu */
+
+/* Responsive Web Design  */
+@media  screen and (max-width: 750px) {
+    .main-header{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+    .mobile-menu{
+        display: flex !important;
+        justify-content: space-between !important;
+    }
+    .main-menu > ul:nth-of-type(2) {
+        flex-direction: column;
+        border-top: 1px solid gainsboro;
+    }
+    .drop > li > a{
+        display: block;
+        width: auto;
+    }
+    #adaptive img {
+        width: 100%;
+        height: auto;
+    }
+    .content-holder{
+        flex-direction: column;
+    }
+    .content-holder .content {
+        width: auto;
+    }
+    .content-holder .sidebar {
+        width: auto;
+    }
+    .footer-widget-holder {
+        flex-direction: columns;
+    }
+    .footer-widget-holder .footer-widget {
+        padding: 10px 25px;
+    }
+}
+
+
+/* Responsive Web Design  */
